# curses

./: .env  .gitignore  .yarnrc.yml  README.md  crowdin.yml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: playwright.yml  release.yml
public/: inputfield.html  mic.html  oauth_twitch.html
public/i18n/en/: translation.json
public/i18n/zh_cn/: translation.json
public/i18n/zh_tw/: translation.json
src/: App.tsx  api.ts  config.ts  i18n.ts  index.tsx  main.tsx  style.css  types.ts  wdyr.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/services/: mod.rs  osc.rs  uwu.rs
src-tauri/src/services/audio/: mod.rs
src-tauri/src/services/keyboard/: mod.rs
src-tauri/src/services/translate/: mod.rs
src-tauri/src/services/uberduck_tts/: mod.rs
src-tauri/src/services/web/: assets.rs  mod.rs  peer.rs  pubsub.rs
src-tauri/src/services/windows_stt/: mod.rs
src-tauri/src/services/windows_tts/: intf.rs  mod.rs  token.rs
src/backend-services/: index.ts  schema.ts
src/backend-services/components/: service-button.tsx
src/backend-services/keyboard/: index.ts
src/backend-services/pubsub/: index.ts
src/backend-services/shortcuts/: index.ts
src/backend-services/state/: index.ts
src/backend-services/stt/: index.ts  inspector.tsx  language-select.tsx  schema.ts  service_data.ts  types.ts
src/backend-services/translation/: index.ts  inspector.tsx
src/backend-services/tts/: index.ts  inspector.tsx  schema.ts  service_data.ts  types.ts  voice-select.tsx
src/backend-services/twitch/: emote_loaders.ts  index.ts  inspector.tsx  schema.ts
src/backend-services/vrc/: data.ts  index.ts  inspector.tsx  schema.ts  types.ts
src/client/: index.ts  readme.md
src/client/elements/: index.ts  schema.ts  utils.ts
src/client/schema/: index.ts
src/client/ui/: element-instance.tsx  loading.module.css  view.tsx  view_loading.tsx
src/components/: Modal.tsx  actionbar.tsx  background-input.module.css  background-input.tsx  canvas.tsx  client-view.tsx  editor-view.tsx  element-instance.tsx  element-transform.tsx  file-modal.tsx  logo.tsx  overlay-input.tsx  service-button.tsx  sidebar.tsx  subheader.tsx
src/components/animation/: index.tsx
src/components/dropdown/: Dropdown.tsx  Tooltip.tsx
src/components/input/: index.tsx  style.module.css
src/components/inspector/: index.tsx  inspector_scenes.tsx  inspector_settings.tsx
src/frontend-services/: index.ts  schema.ts
src/frontend-services/components/: file-element.tsx  name-input.tsx  transform-input.tsx
src/frontend-services/document/: index.ts
src/frontend-services/elements/: index.ts  text.tsx  utils.ts
src/frontend-services/files/: index.ts  inspector.tsx
src/server/: index.ts  schema.ts
src/server/ui/: Modal.tsx  (+10 more)
src/services/: index.ts  schema.ts
src/shared/: index.ts
src/utils/: index.ts
stats/: rollup-stats.html
(+136 files in other folders)
