[package]
name = "simple-stt"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
rosc = "0.9.1"
warp = "0.3.3"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3.25"
windows = { version = "0.43.0", features = [
  "Win32_Foundation",
  "Win32_Media_Speech",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_WindowsProgramming",
] }
clap = { version = "4.0.29", features = ["derive"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package."*"]
opt-level = 3
