[package]
name = "curses"
version = "0.0.10"
description = "A very cool app"
authors = ["mmpneo@gmail.com"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-all", "global-shortcut-all", "shell-open", "window-all"] }
window-shadows = "0.2.0"


mki = "0.2.3"

itertools = "0.10.5"
rosc = "0.9.1"
warp = "0.3.3"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3.25"
windows = { version = "0.44.0", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Media_Speech",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_WindowsProgramming",
] }
clap = { version = "4.0.29", features = ["derive"] }
local-ip-address = "0.4.9"
rodio = "0.16.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
background_input = []
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package."*"]
opt-level = 3
